Refactor. Cleanup api spec
